@@ -1,4 +1,4 @@
-$NetBSD: CHANGES,v 1.11469 2005/10/13 21:35:44 xtraeme Exp $
+$NetBSD: CHANGES,v 1.11470 2005/10/14 00:06:06 rillig Exp $
 
 Changes to the packages collection and infrastructure in 2005:
 
@@ -4571,3 +4571,4 @@ Changes to the packages collection and infrastructure in 2005:
 	Updated comms/synce-rra to 0.9.1nb2 [wiz 2005-10-13]
 	Added sysutils/xenkernel20 version 2.0.7 [agc 2005-10-13]
 	Updated archivers/libarchive to 1.02.036 [xtraeme 2005-10-13]
+	Updated pkgtools/pkglint to 4.28 [rillig 2005-10-14]
